# ofx2csv

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  dev_shell.sh  flake.nix  format.sh  init-template.sh
.github/workflows/: cmake-multi-platform.yml  init-template-test.yml
app/: CMakeLists.txt  main.c
dev/vscode/: launch.json
include/: cstart.h  ofx2csv.h  ofx2csv_macros.h
src/: CMakeLists.txt  cstart.c  ofx2csv.c
test/: CMakeLists.txt  cstart_test.c  ofx2csvtest.c
